<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="tracks_list_title">Tracks</string>
    <string name="albums_list_title">Albums</string>
    <string name="artists_list_title">Artists</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button">search</string>
    <string name="favorites_list_title">Favorites</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="duration">duration</string>
    <string name="lyric">lyric</string>
    <string name="not_added_lyric">lyric not added</string>
    <string name="lyric_added">lyric added</string>
</resources>
