<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchDialogFragment"
    android:background="@drawable/list_background">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/search_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/_16_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/search_button"/>

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search_music"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/search_text"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/_16_dp"
        android:layout_marginTop="@dimen/_16_dp"
        android:layout_marginBottom="@dimen/_16_dp"
        android:layout_marginRight="@dimen/_16_dp"/>

   <RadioGroup
       android:id="@+id/radio_group"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginRight="@dimen/_16_dp"
       android:layout_marginLeft="@dimen/_16_dp"
       android:layout_marginTop="@dimen/_8_dp"
       android:layout_marginBottom="@dimen/_8_dp"
       app:layout_constraintTop_toBottomOf="@id/search_text"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent">

       <android.support.v7.widget.AppCompatRadioButton
           android:id="@+id/search_tracks"
           android:text="@string/tracks_list_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"/>

       <android.support.v7.widget.AppCompatRadioButton
           android:id="@+id/search_albums"
           android:text="@string/albums_list_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"/>

       <android.support.v7.widget.AppCompatRadioButton
           android:id="@+id/search_artists"
           android:text="@string/artists_list_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

   </RadioGroup>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8_dp"
        android:layout_marginBottom="@dimen/_8_dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>